make layout responsive

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
           <div class="col-md-2">
             <button class="input-method-btn {% if percentages and not sentiment and not app_code_analysis %}active{% endif %}" id="btnFile">File Excel</button>
           </div>
-          <div class="col-md-2 me-5">
+          <div class="col-md-2">
             <button class="input-method-btn {% if percentages and app_code_analysis %}active{% endif %}" id="btnKode">Kode Aplikasi</button>
           </div>
         </div>
